--- a/skinet/Core/Core.csproj
+++ b/skinet/Core/Core.csproj
@@ -3,5 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.2"/>
+  </ItemGroup>
 
 </Project>
