--- a/skinet/Infrastructure/Infrastructure.csproj
+++ b/skinet/Infrastructure/Infrastructure.csproj
@@ -2,13 +2,16 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
-    
-    
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.2" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.26.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.26.0" />
   </ItemGroup>
-<ItemGroup>
-<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.2" />
-<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.2" />
-</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="StackExchange.Redis" Version="2.6.90" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.2" />
+  </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
