add migration for identity db

--- a/skinet/API/appsettings.Development.json
+++ b/skinet/API/appsettings.Development.json
@@ -12,7 +12,7 @@
     "Redis": "localhost"
   },
   "Token": {
-    "Key": "super secret key",
+    "Key": "super secret key shawon",
     "Issuer": "https://localhost:5001"
   },
   "ApiUrl": "https://localhost:5001/"
